title image changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saiful Islam - AI/ML Engineer</title>
+    <title>Saiful247</title>
+    <link rel="icon" type="image/png" href="https://github.com/saiful247.png">
+    <link rel="shortcut icon" type="image/png" href="https://github.com/saiful247.png">
+    <link rel="apple-touch-icon" href="https://github.com/saiful247.png">
     <style>
         * {
             margin: 0;
